--- a/cadastro.html
+++ b/cadastro.html
@@ -5,32 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de alunos</title>
-
 </head>
 <body>
-    <form action="inserir.php" method="post" id="matricula">
-        Digite seu nome:
-        <input type="text" name="nome" id="nome">
+    <form action="crud.php" method="post">
+        Digite a matrícula: 
+        <input type="text" name="matricula" id="matricula">
+        <br> <br>
+        Digite seu nome: 
+        <input type="text" name="nome">
         <br> <br>
         Digite sua idade:
-        <input type="number" name="idade" id="idade">
-        <br> <br>
-        Digite a matricula:
-        <input type="number" name="matricula">
-        <input size="9" type="submit" value="GRAVAR">
+        <input size="9" type="text" name="idade">
+        
+        <input type="submit" value="INSERIR" name="inserir">
+        <input type="submit" value="EXCLUIR" name="excluir">
+        <input type="submit" value="ALTERAR" name="alterar">
+        <input type="submit" value="LISTAR" name="listar">
+        
     </form>
-    <button onclick="Excluir();">
-        EXCLUIR
-    </button>
-<br>
 
 </body>
-
-<script>
-    function Excluir()
-    {
-        M = matricula.value
-        window.open("excluir.php?M="+M,"_self")
-    }
-</script>
 </html>
